# servicioNotificacionesC-

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
clientmodels/: DeviceDTO.h  EventDTO.h  EventTypes.h  PositionDTO.h  UserDTO.h
controller/: NotificationRoutes.cpp  NotificationRoutes.h
database/: Database.cpp  Database.h
dto/: NotificationMessage.h  Typed.h
models/: EventWrapper.h  Notification.h  NotificationMessage.h
notificationsBaseDocker/: docker-compose.yml  notifications_postgres.sql
repositories/: NotificationRepository.h
services/: NotificationFormatter.h  NotificationService.h  NotificatorManager.h
services/notificator/: MailService.h  Notificator.h  NotificatorCommand.h  NotificatorMail.h  NotificatorWeb.h
utils/: ApiClientService.h  AttributesConverter.h  SessionUtil.h
